<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:summary="@string/summary_display_name">


    <PreferenceCategory app:title="@string/pref_title_general">

        <EditTextPreference
            android:defaultValue="false"
            app:defaultValue="false"
            app:key="user_display_name"
            app:title="@string/pref_display_name"
            />
        <EditTextPreference
            android:defaultValue="false"
            android:key="@string/key_user_email_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/summary_email_address"
            android:title="@string/pref_email_address" />

        <ListPreference
            app:defaultValue="false"
            app:entries="@array/pref_entries_fav_social"
            app:entryValues="@string/pref_values_fav_social"
            app:key="user_favorite_social"
            app:summary="Select your favorite social network"
            app:title="@string/pref_title_favourite_social" />


    </PreferenceCategory>


    <PreferenceCategory
        app:icon="@drawable/ic_baseline_message_24"
        app:iconSpaceReserved="false"
        app:title="@string/messages_header">

        <EditTextPreference
            app:iconSpaceReserved="true"
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>