<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="101"
        android:title="@string/action_next"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="102"
        android:title="@string/action_send_mail"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_set_notification"
        android:title="@string/action_set_notification"
        />
    <item
        android:id="@+id/action_backup_note"
        android:enabled="true"
        android:title="@string/action_backup_notes"
        android:visible="true" />
    <item
        android:id="@+id/action_upload_note"
        android:enabled="true"
        android:title="@string/action_upload_notes"
        android:visible="true" />

</menu>